# routes/api.php
@@ -5,6 +5,7 @@ use App\Http\Controllers\Api\Auth\LogoutController;
 use App\Http\Controllers\Api\BrandController;
 use App\Http\Controllers\Api\CategoryController;
 use App\Http\Controllers\Api\PromotionController;
+use App\Http\Controllers\Api\User\UserOrderController;
 use App\Http\Middleware\JwtMiddleware;
 use Illuminate\Support\Facades\Route;
 
@@ -18,5 +19,9 @@ Route::prefix('v1')->group(function () {
         Route::apiResource('categories', CategoryController::class);
         Route::apiResource('brands', BrandController::class);
         Route::apiResource('promotions', PromotionController::class);
+
+        Route::prefix('user')->group(function () {
+            Route::apiResource('orders', UserOrderController::class);
+        });
     });
 });
